--- a/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".dialog.DialogContact"
+            android:theme="@style/Theme.AppCompat.Dialog"
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
