--- a/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TimeScheduleMobileGroup11"
         tools:targetApi="31">
         <activity
+            android:name=".fragment.ScheduleActivity"
+            android:exported="false" />
+        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
