--- a/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TimeScheduleMobileGroup11"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".FlashActivity"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <!-- <activity -->
+        <!-- android:name=".FlashActivity" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
