--- a/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     xmlns:tools="http://schemas.android.com/tools" >
 
+    <uses-feature android:name="android.hardware.telephony" android:required="true"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
@@ -19,19 +20,6 @@
         <activity
             android:name=".ProfileActivity"
             android:exported="false" />
-        <!-- <activity -->
-        <!-- android:name=".FlashActivity" -->
-        <!-- android:exported="false" /> -->
-
-
-        <activity
-            android:name=".dialog.DialogContact"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat.Dialog" />
-
-<!--        <activity-->
-<!--            android:name=".FlashActivity"-->
-<!--            android:exported="false" />-->
       
         <activity
             android:name=".LoginActivity"
