--- a/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    xmlns:tools="http://schemas.android.com/tools" >
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="true" />
 
-    <uses-feature android:name="android.hardware.telephony" android:required="true"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
@@ -18,9 +20,11 @@
         android:theme="@style/Theme.TimeScheduleMobileGroup11"
         tools:targetApi="31">
         <activity
+            android:name=".EventActivity"
+            android:exported="false" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false" />
-      
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
@@ -31,8 +35,6 @@
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
-       
-       
         <activity
             android:name=".MainActivity"
             android:exported="false" />
