--- a/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
 
     <application
         android:allowBackup="true"
@@ -19,6 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TimeScheduleMobileGroup11"
         tools:targetApi="31">
+        <activity
+            android:name=".fragment.UserFragment"
+            android:exported="false" />
         <activity
             android:name=".dialog.NotificationDialog"
             android:exported="false" />
