cập nhập sự kiện
upload ảnh và item thành công

--- a/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".fragment.UserFragment"
             android:exported="false" />
         <activity
-            android:name=".DetailEventActivity"
+            android:name=".EventDetailActivity"
             android:exported="false" />
         
         <activity
